busybox-po.yml
apiVersion: v1
kind: Pod
metadata:
  name: busybox-po
  namespace: demo
spec:
  containers:
    - name: busybox-co
      image: busybox
      command: ["sleep", "1000"]
