hello-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-deploy
  namespace: demo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hello
  template:
    metadata:
      labels:
        app: hello
    spec:
      containers:
        - name: hello-co
          image: nginxdemos/hello
          ports:
            - containerPort: 80
