hello-po.yml
apiVersion: v1
kind: Pod
metadata:
  name: hello-po
  namespace: demo
spec:
  containers:
    - name: hello-co
      image: nginxdemos/hello
      ports:
        - containerPort: 80
