mysql-configmap.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-deploy
  namespace: demo
spec:
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
        - image: mysql:5.7
          name: mysql-co
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: config
              mountPath: /etc/mysql/conf.d/local.cnf
              subPath: local.cnf
      volumes:
        - name: config
          configMap:
            name: mysql-cm
