hello-svc-nodeport.yml
apiVersion: v1
kind: Service
metadata:
  name: hello-svc
  namespace: demo
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: hello
