hello-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: hello-svc
  namespace: demo
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: hello
