mysql.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-deploy
  namespace: demo
spec:
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
        - image: mysql:5.7
          name: mysql-co
          ports:
            - containerPort: 3306
---
apiVersion: v1
kind: Service
metadata:
  name: mysql-svc
  namespace: demo
spec:
  ports:
    - port: 3306
  selector:
    app: mysql
