hello-ing.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hello-ing
  namespace: demo
spec:
  backend:
    serviceName: hello-svc
    servicePort: 80
